# benz_sent_filter

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.runpod  INTEGRATION.md  Makefile  README.md  ROUTINE_FILTER_ANALYSIS.md  ROUTINE_SCORE_INVESTIGATION.md  VALIDATION_REPORT.md  evaluate_routine_headlines.py  fly.toml  mnls_classification_guide.md  pyproject.toml  shared_docs
.beads/: issues.jsonl
.claude/: PATTERNS.md  settings.json
.claude/agents/: feature-writer.md  review-executor.md  team-member.md
.claude/skills/: sentiment-filter-expert.md
docs/: RUNPOD_DEPLOYMENT.md
integration/: __init__.py  conftest.py  test_classification_integration.py  test_company_relevance_multi.py  test_filter_activation_report.py
integration/fixtures/: 2025-08-14_to_2025-08-18_classified_subset.json  2025-08-14_to_2025-08-18_classified_subset_README.md
scripts/: comprehensive_threshold_analysis.py  diagnostic_deberta_scores.py  diagnostic_presence_scores.py  test_clinical_trial_presence.py  test_dividend_headline.py  test_filter_pipeline_sequence.README.md  test_filter_pipeline_sequence.sh  test_onar_headline.py  test_runpod_local.sh  test_strategic_catalyst.py
specs/: 2025-11-16_00-00_mnls_classification_api.md  2025-11-17_00-40_company_relevance_detection.md  2025-11-17_17-15_far_future_forecast_detection.md  2025-11-17_17-30_routine_operations_filter.md  2025-11-18_multi_ticker_routine_operations.md  2025-11-19_12-31_quantitative_catalyst_detection_mnli.md  2025-11-19_21-30_conditional_language_detection.md  2025-11-20_21-59_strategic_catalyst_detection.md  2025-12-11_12-30_runpod_serverless_integration.md  tests_2025-11-16_00-00_mnls_classification_api.md  tests_2025-11-17_00-40_company_relevance_detection.md  tests_2025-11-17_routine_operations_filter.md  tests_2025-11-19_21-30_conditional_language_detection.md  tests_2025-11-20_21-59_strategic_catalyst_detection.md
specs/2026-02-08_mnli-model-upgrade-deberta/: design-review.md  simplification-review.md  spec.md  tests.md  validation.md
src/benz_sent_filter/: __init__.py  __main__.py  logging_config.py  runpod_handler.py
src/benz_sent_filter/api/: __init__.py  app.py
src/benz_sent_filter/config/: __init__.py  settings.py
src/benz_sent_filter/models/: __init__.py  classification.py
src/benz_sent_filter/services/: __init__.py  classifier.py  forecast_analyzer.py  quantitative_catalyst_detector_mnls.py  routine_detector.py  routine_detector_mnls.py  strategic_catalyst_detector_mnls.py
tests/: __init__.py  conftest.py  test_api.py  test_catalyst_type_disambiguation.py  test_classifier.py  test_config.py  test_models.py  test_quantitative_catalyst_detector.py  test_routine_detector.py  test_routine_detector_mnls_production.py  test_runpod_handler.py  test_strategic_catalyst_detector_mnls.py
