[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benz-sent-filter"
version = "0.1.0"
description = "MNLS-based sentiment classification service for article title analysis"
authors = [
    {name = "Benz Ecosystem Team"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "loguru>=0.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "uvicorn[standard]>=0.24.0",
    "typer>=0.9.0",
    "transformers>=4.35.0,<4.36.0", # Pin to version compatible with torch 2.0
    "torch>=2.0.0,<2.1.0", # Pin to version with Intel Mac support
    "numpy>=1.24.0,<2.0.0", # Pin to numpy 1.x for torch 2.0 compatibility
    "runpod>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
]

[project.scripts]
benz-sent-filter = "benz_sent_filter.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "integration"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"
markers = [
    "integration: marks tests as integration tests that load real models (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["src/benz_sent_filter"]
omit = ["tests/*", "src/benz_sent_filter/__main__.py"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long

[tool.ruff.lint.isort]
known-first-party = ["benz_sent_filter"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.11",
]
